deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: metacenter-docs-svc
  namespace: docs
  labels:
    run: metacenter-docs
spec:
  type: NodePort
  ports:
  - port: 6000
    targetPort: 6000
    nodePort: 30003
  selector:
    app: metacenter-docs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metacenter-docs
  namespace: docs
  labels:
    app: metacenter-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metacenter-docs
  template:
    metadata:
      labels:
        app: metacenter-docs
    spec:
      containers:
      - name: metacenter-docs
        image: metacenter/docs:0.1
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        imagePullPolicy: Always
      - name: nginx
        image: nginx
        ports:
        - containerPort: 6000
        volumeMounts:
        - mountPath: /etc/nginx # mount nginx-conf volumn to /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
          items:
            - key: nginx.conf
              path: nginx.conf
            - key: virtualhost.conf
              path: virtualhost/virtualhost.conf # dig directory
      - name: log
        emptyDir: {}
      imagePullSecrets:
      - name: mcregcred
